fix: user auth swagger
